@@ -31,6 +31,9 @@ Prior to this patch the region for the second camera was not being computed or
 displayed properly
 
 
+- ref_calibration_object() accepts uneven horizontal, vertical spacings. And it
+  can broadcast over object_spacing and calobject_warp
+
 
 * Migration notes 2.1 -> 2.2
 This is a /very/ minor release, and is 99.9% compatible. Incompatible updates:
